Verwysing nå döärverwyssyde repareerd ([[Apeldoorne]] nå [[Apeldoorne (stad)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Lepeldiefjen.mw
+++ b/Lepeldiefjen.mw
@@ -75,7 +75,7 @@ De naam ''lepeldiefjen'', en variaanten op disse vorm, kömp van t spelletjen wa
 ** ''rammelaar''
 *[[Veluws]]:
 **''herderstasjen''
-**''herderstassien'' ([[Heerde]], [[Une]], [[Emst]], [[Apeldoorne]])
+**''herderstassien'' ([[Heerde]], [[Une]], [[Emst]], [[Apeldoorne (stad)|Apeldoorne]])
 **''herderstässien'' ([[Wezep]], [[Vaossen]])
 **''harderstasjen'' ([[Nunspeet]])
 **''harderstassien'' ([[Epe]])
@@ -84,7 +84,7 @@ De naam ''lepeldiefjen'', en variaanten op disse vorm, kömp van t spelletjen wa
 **''laepeltieskruud'' ([[Vaossen]])
 **''lepeldief'' ([[Putten]], [[Garder]])
 **''lepeltjesdief'' ([[Barreveld]])
-**''laepeltjesdief'' ([[Apeldoorne]])
+**''laepeltjesdief'' ([[Apeldoorne (stad)|Apeldoorne]])
 **''lepeldiefjen'' ([[Nunspeet]])
 **''lepelbluumpien'' ([[Elburg]])
 **''lepeltiesblad'' ([[Veessen]])
