*Empty MediaWiki Message*

--- a/Irminsul.mw
+++ b/Irminsul.mw
@@ -1,3 +1,4 @@
+[[Bestaand:Zerstörung der Irminsaule durch Karl den Großen by Heinrich Leutemann.jpg|thumb|250px|[[Karel de Grote]] dee de Irminsul kapot maakt, Heinrich Leutemann (1824-1904)]]
 De '''Irminsûl''' waren vrogger belangryke heiligdommen van de olde [[Saksen (vôlk)|sassen]] up de achtse eywe, med een groute symboliske waerde. De sassen waren een [[Germanen|germaansk]] volk dat up et noorden van et hüdige [[Düütskland]] en et ousten van et hüdige [[Nederlaand|Neaderland]] leavden, van den Yssel töt de Elbe. .   
 
 Et Waren slim hoge pöäle, sulen of manks ouk wel eyns ofebeyled as heyle dikke boumen. 
