Verwysing nå döärverwyssyde repareerd ([[Voorst]] nå [[Voorst (darp)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Empe.mw
+++ b/Empe.mw
@@ -1,6 +1,6 @@
 '''Empe''' is n [[darp]] in de [[gemiente (bestuur)|gemeente]] [[Brummen]], in de [[Nederlaand|Nederlandse]] [[pervincie|provinsie]] [[Gelderlaand|Gelderland]]. In t veurst van [[2009]] had t darp 708 inwoners.<ref>[http://www.brummen.nl/smartsite.shtml?id=78453&menu2=78453&menu3= Brummen.nl]</ref>
 
-Empe ligt tussen [[Voorst]] en [[Zutfent]] an de spoorliende [[Apeldoorne]] - Zutfent. Ten noorden van t darp ligt stasion Voorst-Empe, die op 10 desember 2006 lös ging. Van 1876 töt 1938 ha'j hier ''stasion Voorst''.
+Empe ligt tussen [[Voorst (darp)|Voorst]] en [[Zutfent]] an de spoorliende [[Apeldoorne]] - Zutfent. Ten noorden van t darp ligt stasion Voorst-Empe, die op 10 desember 2006 lös ging. Van 1876 töt 1938 ha'j hier ''stasion Voorst''.
 
 An de butenrand van t darp ligt t kasteelachtige [[landhuus]] ''Huus Empe'', dat stamt uut um-en-naobie 1550. t Wier ebouwd deur Thomas van Buerlo, [[burgemeister]] van [[Zutfent]]. t Huus Empe kreeg bekendheid deurdat in mr. W.H. van Hasselt in de jaoren zestig van de 18e eeuw hier [[ziede (textiel)|ziede]] ging telen.
 
