--- a/Nightwish.mw
+++ b/Nightwish.mw
@@ -1,4 +1,4 @@
-'''Nightwish''' is n [[Finlaand|Finse]] metalband oet [[Kitee]].
+'''Nightwish''' is n [[Finlaand|Finse]] [[Metal (muziek)|metal]]<nowiki/>band oet [[Kitee]].
 
 == Bezetten ==
 * Tuomas Holopainen
