*Empty MediaWiki Message*

--- a/Nightwish.mw
+++ b/Nightwish.mw
@@ -1,23 +1,34 @@
 '''Nightwish''' is n [[Finlaand|Finse]] [[Metal (muziek)|metal]]<nowiki/>band oet [[Kitee]].
 
 == Bezetten ==
-* Tuomas Holopainen
-* Emppu Vuorinen
-* Marco Hietala
-* Troy Donockley
-* Floor Jansen
-* Kai Hahto
+* [[Tuomas Holopainen]]
+* [[Emppu Vuorinen]]
+* [[Marco Hietala]]
+* [[Troy Donockley]]
+* [[Floor Jansen]]
+* [[Kai Hahto]]
+
+==Vroger leden==
+
+* [[Sami Vänskä]] – (<small>1998–2001, ok in 2016)</small>
+* [[Tarja Turunen]] – <small>(1996–2005)</small>
+* [[Anette Olzon]] – <small>(2007–2012)</small>
+* [[Jukka Nevalainen]] – <small>(1997–2019; maar nich 2014–2019)</small>
+* [[Marko Hietala]] – <small>(2001–2021)</small>
+* [[Samppa Hirvonen]] – <small>(1997–1998, live)</small>
+* [[Marianna Pellinen]] – <small>(1997–1998, live)</small>
+* [[Esa Lehtinen]] – <small>(1997–2000, studio)</small>
 
 == Plaatn ==
-* Angels Fall First (1997)
-* Oceanborn (1998)
-* Wishmaster (2000)
-* Century Child (2002)
-* Once (2004)
-* Dark Passion Play (2007)
-* Imaginaerum (2011)
-* Endless Forms Most Beautiful (2015)
-* Human. :II: Nature. (2020)
+* [[Angels Fall First (1997)]]
+* [[Oceanborn (1998)]]
+* [[Wishmaster (2000)]]
+* [[Century Child (2002)]]
+* [[Once (2004)]]
+* [[Dark Passion Play (2007)]]
+* [[Imaginaerum (2011)]]
+* [[Endless Forms Most Beautiful (2015)]]
+* [[Human. :II: Nature. (2020)]]
 {{Dialekt|gos}}
 [[Kategorie:Muziekgroep]]
 [[Kategorie:Finlaand]]
