*Empty MediaWiki Message*

--- a/Nightwish.mw
+++ b/Nightwish.mw
@@ -8,12 +8,12 @@
 * [[Floor Jansen]]
 * [[Kai Hahto]]
 
-==Vroger leden==
+==Vrougere leden==
 
-* [[Sami Vänskä]] – (<small>1998–2001, ok in 2016)</small>
+* [[Sami Vänskä]] – (<small>1998–2001, ook in 2016)</small>
 * [[Tarja Turunen]] – <small>(1996–2005)</small>
 * [[Anette Olzon]] – <small>(2007–2012)</small>
-* [[Jukka Nevalainen]] – <small>(1997–2019; maar nich 2014–2019)</small>
+* [[Jukka Nevalainen]] – <small>(1997–2019; maar nait 2014–2019)</small>
 * [[Marko Hietala]] – <small>(2001–2021)</small>
 * [[Samppa Hirvonen]] – <small>(1997–1998, live)</small>
 * [[Marianna Pellinen]] – <small>(1997–1998, live)</small>
