*Empty MediaWiki Message*

--- a/The_Abyss_(band).mw
+++ b/The_Abyss_(band).mw
@@ -8,7 +8,7 @@
 ==Discografie==
 * ''The Other Side'' (1995)
 * ''Summon the Beast'' (1996)
-* ''In Conspiracy With Satan'' (1998) - een [[Bathory (band)|Bathory]] tribute album, dät het lied ''Armageddon'' hef ecovered,
+* ''In Conspiracy With Satan'' (1998) - een [[Bathory (band)|Bathory]] tribute album, det het lied ''Armageddon'' hef ecovered,
 
 {{Dialekt|sdz}}
 
