[[:Kategorie:Reggae]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Rocksteady.mw
+++ b/Rocksteady.mw
@@ -6,3 +6,4 @@ Rocksteady kan meyr as oavergangstyd eseen worden. Vöäle jamaikaanske musikant
 
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Meziekstiel]]
+[[Kategorie:Reggae]]
