--- a/Berkum_(wiek).mw
+++ b/Berkum_(wiek).mw
@@ -12,31 +12,31 @@
 | netnummer=038
 | postcode=8024, 8025, 8026, 8028,
 | soorte=Wiek
-|ofbeelding2=Map NL Zwolle Berkum.PNG|Ligging van Bärkum in de gemiente Zwolle|oppervlak laand=18,38 km²|oppervlak water=0,47 km²|lokasie=|webstee=https://www.wijkverenigingberkum.nl/|oppervlak=18,85 km²}}
-'''Bärkum''' ([[Nederlaands]]: ''Berkum'') is een wiek en [[Berkum (buurt)|buurt]] van de [[Oaveriessel]]se heufdstad [[Zwolle]]. Per 1 jannewaori 2005 had Bärkum 4.513 inwoners. Een flink diel van de inwoners (1.152) bint oaver de 65, mar de leste jaoren koomt d'r aal meer jonge gezinnen bi'j.
+|ofbeelding2=Map NL Zwolle Berkum.PNG|Ligging van Berkum in de gemiente Zwolle|oppervlak laand=18,38 km²|oppervlak water=0,47 km²|lokasie=|webstee=https://www.wijkverenigingberkum.nl/|oppervlak=18,85 km²}}
+'''Berkum''' ([[Nederlaands]]: ''Berkum'') is een wiek en [[Berkum (buurt)|buurt]] van de [[Oaveriessel]]se heufdstad [[Zwolle]]. Per 1 jannewaori 2005 had Berkum 4.513 inwoners. Een flink diel van de inwoners (1.152) bint oaver de 65, mar de leste jaoren koomt d'r aal meer jonge gezinnen bi'j.
 
 ==Indieling==
-[[Ofbeelding:Nieuwe_Vecht_Berkum.jpg|thumb|right|220px|De Ni'je Vechte bi'j Bärkum]]
-Bärkum lig aordig laandelijk an de oostelijke stadsraand, tussen de revier de [[Vechte]], de stadsrevier de [[Ni'je Vechte]], de [[Rieksweg 28|A28]] en de Ceintuurbaan. De wiek bestiet uut Bärkum, Brinkhoek, Veldhoek, bedrieventerrein [[De Vrolijkheid]], de [[Hessenpoorte]], de [[Tolhuuslaanden]] en [[Oosterenk]], veurnamelk een kantorenterrein. In Oosterenk ligt ok de Isala Klinieken, locatie Sophia. Bärkum wördt van de stad of-escheiden deur weilaanden en sportvelden. De grune streke wördt wal kleiner deur ni'jbouw. D'r is een uutbreidingsplan inclusief hoogbouw, waordeur 't bebouwde diel van Bärkum tweimaol zo groot zol wörden.<ref>[http://www.wijkverenigingberkum.nl/FileLib/binnenwerkwandel.pdf Wiekverienging Berkum: Campherbeekroute (pdf)]</ref>
+[[Ofbeelding:Nieuwe_Vecht_Berkum.jpg|thumb|right|220px|De Ni'je Vechte bi'j Berkum]]
+Berkum lig aordig laandelijk an de oostelijke stadsraand, tussen de revier de [[Vechte]], de stadsrevier de [[Ni'je Vechte]], de [[Rieksweg 28|A28]] en de Ceintuurbaan. De wiek bestiet uut Berkum, Brinkhoek, Veldhoek, bedrieventerrein [[De Vrolijkheid]], de [[Hessenpoorte]], de [[Tolhuuslaanden]] en [[Oosterenk]], veurnamelk een kantorenterrein. In Oosterenk ligt ok de Isala Klinieken, locatie Sophia. Berkum wördt van de stad of-escheiden deur weilaanden en sportvelden. De grune streke wördt wal kleiner deur ni'jbouw. D'r is een uutbreidingsplan inclusief hoogbouw, waordeur 't bebouwde diel van Berkum tweimaol zo groot zol wörden.<ref>[http://www.wijkverenigingberkum.nl/FileLib/binnenwerkwandel.pdf Wiekverienging Berkum: Campherbeekroute (pdf)]</ref>
 
 ==Veurzienings==
-An veurzienings hef Bärkum onder aandere een winkelcentrum, basisschoelen, een bibliotheek, karken, een wiekcentrum, sportvelden (onder meer van [[VV Berkum]]) en zörgcentrum Berkumstede/De Wissel. In Oosterenk stiet 't stadium van [[FC Zwolle]]. Bi'j Bärkum Brinkhoek ligt de [[Agnietenbarg]] en de [[Agnietenplas]]. Op de Agnietenbarg lig [[Begraafplaatse Bargklooster]] mit een monument veur de middeleeuwse schriever [[Thomas a Kempis]]. Op de Vechte en in de Berkumer Kolke hej [[pleziervaort]].
+An veurzienings hef Berkum onder aandere een winkelcentrum, basisschoelen, een bibliotheek, karken, een wiekcentrum, sportvelden (onder meer van [[VV Berkum]]) en zörgcentrum Berkumstede/De Wissel. In Oosterenk stiet 't stadium van [[FC Zwolle]]. Bi'j Berkum Brinkhoek ligt de [[Agnietenbarg]] en de [[Agnietenplas]]. Op de Agnietenbarg lig [[Begraafplaatse Bargklooster]] mit een monument veur de middeleeuwse schriever [[Thomas a Kempis]]. Op de Vechte en in de Berkumer Kolke hej [[pleziervaort]].
 
 ==Geschiedenis==
-Bärkum was vanolds een [[buurtschop]] buten Zwolle. D'r bint naamsvariaanten op-etiekend zoas Barkmen (1233?), Bircmede (1364), Berkman (1456), Berkmen (1801) en Bärkum (1840). De name Bircmede of Berckmede kump töt in de [[16e eeuw|16e ieuw]] veur en zol wiezen op een weidegebied mit berken. As de olde vörm uut 1233 juust is, wisselden 't gebruuk van -men en -mede al vrogge.
+Berkum was vanolds een [[buurtschop]] buten Zwolle. D'r bint naamsvariaanten op-etiekend zoas Barkmen (1233?), Bircmede (1364), Berkman (1456), Berkmen (1801) en Berkum (1840). De name Bircmede of Berckmede kump töt in de [[16e eeuw|16e ieuw]] veur en zol wiezen op een weidegebied mit berken. As de olde vörm uut 1233 juust is, wisselden 't gebruuk van -men en -mede al vrogge.
 
 ===Havezates Campherbeek en Kranenbörg===
 [[Ofbeelding:Campherbeek.jpg|thumb|right|220px|Campherbeek op een prent uut 1729 van Abraham de Haen]]
-In Bärkum hebt de [[havezate]]s [[Campherbeek]] en [[Kranenbörg (Oaveriessel)|Kranenbörg]] estaone. Campherbeek wördden ebouwd deur [[Steven Campherbeek]], [[drost]] van [[Sallaand]]. In 1427 wördt esproken van 'een paer volckes in Camferbeken schuer'; in 1520 van een goed. Rond 1700 is 't kestiel op zien heugtepunt; 't is een L-vörmig gebouw mit een zeskaantige toren, mit een bouwhuus an weerskaanten. In de daorop volgende twee ieuwen wördden 't an-epast en tenslotte of-ebreuken. Een gelieknamige basisschoele stiet ongeveer op de plek daoras de havezate hef estaone; ok de deurgaonde weg de Campherbeeklane herinnert d'r an.
+In Berkum hebt de [[havezate]]s [[Campherbeek]] en [[Kranenbörg (Oaveriessel)|Kranenbörg]] estaone. Campherbeek wördden ebouwd deur [[Steven Campherbeek]], [[drost]] van [[Sallaand]]. In 1427 wördt esproken van 'een paer volckes in Camferbeken schuer'; in 1520 van een goed. Rond 1700 is 't kestiel op zien heugtepunt; 't is een L-vörmig gebouw mit een zeskaantige toren, mit een bouwhuus an weerskaanten. In de daorop volgende twee ieuwen wördden 't an-epast en tenslotte of-ebreuken. Een gelieknamige basisschoele stiet ongeveer op de plek daoras de havezate hef estaone; ok de deurgaonde weg de Campherbeeklane herinnert d'r an.
 
 [[Ofbeelding:Havezathe Kranenburg.PNG|thumb|right|220px|Schilderi'je van de havezate Kranenbörg (1840)]]
 De havezate Kranenbörg, mit bi'jbehorend laandgoed, lag op de plek daoras now de [[Begraafplaatse Kranenbörg]] lig. De eerste vermelding stamt uut 1471, toen de femilie Campherbeek eigenaor was. Daornao was 't laandgoed eigendom van 't geslacht Mulert. In 1580 hebt de terogtrekkende troepen van de [[George van Lalaing|Graaf van Rennenberg]] de havezate verrinneweerd. Tiekeningen van [[Gerard ter Borch (II)|Gerard ter Borch de jonge]] uut 1633 laot de ruïne zien. In 1642 kocht [[Rutger van Haersolte]] 't bezit, leut de ruïne ofbreken en bouwden d'r een ni'j huus. De femilie Vos de Wael, eigenaor van 't laandgoed sinds begun [[19e eeuw|19e ieuw]], gebruukte 't veural veur de jacht. In 1844 bint de gebouwen esloopt; de toegaank töt 't laandgoed - de Prinsenpoorte - is van plek verhuusd en op-eneumen in de tègenwoordige begraafplaatse.
 
-===De Bärkumerbrogge===
-Oaver de [[Vechte]] bi'j Bärkum wördden in 1451 de Bärkumerbrogge an-elegd deur de stad Zwolle en 't klooster [[Agnietenbarg]]. De Vechte was slim belangriek veur Zwolle umdet al 't haandelsverkeer vanuut 't tègenwoordige [[Duutslaand]] en vanuut 't noorden gebruukmaakten van dizze revier.
+===De Berkumerbrogge===
+Oaver de [[Vechte]] bi'j Berkum wördden in 1451 de Berkumerbrogge an-elegd deur de stad Zwolle en 't klooster [[Agnietenbarg]]. De Vechte was slim belangriek veur Zwolle umdet al 't haandelsverkeer vanuut 't tègenwoordige [[Duutslaand]] en vanuut 't noorden gebruukmaakten van dizze revier.
 
 ===Zwollerkarspel en de mederne wiek===
-Veurdet Bärkum bi'j de gemiente Zwolle kwaamp, heurden 't bi'j de gemiente [[Zwollerkärspel|Zwollerkarspel]] (1802-1967), die bestund uut de um Zwolle hen liggende dörpen en gemienschoppen. Zwollekarspel umvatten 't vroggere schoutambt van Zwolle. In de [[20e eeuw|20e ieuw]] wolden veul mèensen uut de stad Zwolle in 't butengebied wonen. Nao de [[Tweede Wereldoorlog]] bint daorumme hiele buurten ebouwd, waoronder 't tègenwoordige Bärkum. Deur de raandligging van Bärkum wördt d'r nog vake oaver Zwolle en Bärkum as verschillende entiteiten esproken. Net zoals in [[Westenholte]] bestiet hier het dörpsgevuul nog ('Zwollerkarspelgevuul'<ref>De Stem der Gemeente Zwollerkerspel & De opheffing van Zwollerkerspel (Peter Tijhaar)</ref>).
+Veurdet Berkum bi'j de gemiente Zwolle kwaamp, heurden 't bi'j de gemiente [[Zwollerkärspel|Zwollerkarspel]] (1802-1967), die bestund uut de um Zwolle hen liggende dörpen en gemienschoppen. Zwollekarspel umvatten 't vroggere schoutambt van Zwolle. In de [[20e eeuw|20e ieuw]] wolden veul mèensen uut de stad Zwolle in 't butengebied wonen. Nao de [[Tweede Wereldoorlog]] bint daorumme hiele buurten ebouwd, waoronder 't tègenwoordige Berkum. Deur de raandligging van Berkum wördt d'r nog vake oaver Zwolle en Berkum as verschillende entiteiten esproken. Net zoals in [[Westenholte]] bestiet hier het dörpsgevuul nog ('Zwollerkarspelgevuul'<ref>De Stem der Gemeente Zwollerkerspel & De opheffing van Zwollerkerspel (Peter Tijhaar)</ref>).
 
 ==Uutgaonde verwiezings==
 [[Ofbeelding:Berkum - De Kolk.jpg|thumb|right|220px|De Berkumer Kolke, ok de Kolke van Koezen enuumd]]
