--- a/Zwollerkärspel.mw
+++ b/Zwollerkärspel.mw
@@ -13,19 +13,18 @@ daotum inwoeners = 1967 |
 dichtheid = 99 |
 breedtegraod = 52/31/0/N |
 lengtegraod = 6/5/0/E |
-verkeersaoder = A28, N35, N331, N337, N340, N764; spoor naor [[Grunnen (stad)|Grönning]], [[Liwwadden (stad)|Liwwadden]], [[Amersfoort]], [[Em (plaots)|Emmen]], [[Almelo]], [[Arnem]], [[Utrecht (stad)|Utrecht]] en [[Kampen (Overiessel)|Kampen]] |
 netnummer = |
 postcode = |
 webstee = |
 }}
 [[ofbeelding:Overzicht voorgevel met toren en rechter zijgevel met serre, villa - Zwolle - 20350457 - RCE.jpg|miniatuur|[[Gemientehuus]] van Zwollerkärspel (1916-1967) in [[Ter Pelkwijkpark]], in Hollandse neo-renaissancestijl]]
 [[ofbeelding:Raadhuis Zwollerkerspel.jpg|miniatuur|Et gemientehuus was een [[herenhuus]] ontwörpen deur S.J.H Troost en in 1884 was et bouwen van et herenhuus klaor<ref>https://rijksmonumenten.nl/monument/509844/herenhuis-in-hollandse-neo-renaissancestijl-1916-1967-gemeentehuis-van-zwollerkerspel/zwolle/</ref>|alt=]]
-'''Zwollerkärspel''' was een vroggere gemiente die op [[1 augustus]] 1967 is op egaon en noe diel uutmaakt van de (toenmaolige) gemientes [[Heino (Roalte)|Heino]] (noe [[Raolte]]), [[Zwolle]], [[Iesselmuden]] (noe [[Kampen (Overiessel)|Kampen]]) en [[Asselt]] en [[Genemuden]] (noe [[Zwärtewäterlaand|Zwärtewäterlaand]]). De näme ''[[Kärspel]]'' kump van et feit dät et gebied bi'j een [[Kaark (gebouw)|kerk]] heurden. De näme ''Zwoller'' kump weg van et feit dät de gemiente rondom de stad Zwolle hen lag. De gemiente had in 1967 14.615 inwoners op een oppervlakte van 147,5 [[Vierkaante kilemeter|veerkaante kilometer]]. In [[1813]] had de gemiente nog 3500 inwoners. De gemiente had toen nog niet zien hudige vörm. <ref>https://www.archieven.nl/nl/zoeken?mivast=0&mizig=210&miadt=141&miaet=1&micode=0801&minr=10636340&miview=inv2</ref>
+'''Zwollerkärspel''' was een vroggere gemiente die op [[1 augustus]] 1967 is op egaon en noe diel uutmaakt van de (toenmaolige) gemientes [[Heino (Roalte)|Heino]] (noe [[Raolte]]), [[Zwolle]], [[Iesselmuden]] (noe [[Kampen (Overiessel)|Kampen]]) en [[Asselt]] en [[Genemuden]] (noe [[Zwärtewäterlaand|Zwärtewäterlaand]]). De näme ''[[Kärspel]]'' kump van et feit dät et gebied bi'j een [[Kaark (gebouw)|kerk]] heurden. De näme ''Zwoller'' kump weg van et feit dät de gemiente rondom de stad Zwolle hen lag. De gemiente had in 1967 14.615 inwoners op een oppervlakte van 147,5 [[Vierkaante kilemeter|veerkaante kilometer]]. In [[1813]] had de gemiente nog 3500 inwoners. De gemiente had toen nog niet zien hudige vörm.<ref>https://www.archieven.nl/nl/zoeken?mivast=0&mizig=210&miadt=141&miaet=1&micode=0801&minr=10636340&miview=inv2</ref>
 
 == Geschiedenisse töt de [[iezertied]] ==
-Meer als 70.000 jaor eleden waren er [[Neanderthaler]]<nowiki/>s in [[Haorste]] te vinden. In de [[Bomhofsplas]] bint er in [[1988]] en [[1989]] resten van Neanderthalers evunden, waoronder een bewärkte [[voestbiele]]. Ook in [[Sekdoorn]] bint resten van Neanderthalers evunden<ref>Atlas van de Vecht, <nowiki>https://issuu.com/provicieoverijssel/docs/atlas_van_de_vecht_lr/56</nowiki></ref>. Tiedens de iestieden was et alderbärstens kold. Uutendelik bint de Neanderthalers uut estörven. Ongeveer 40.000 jaor eleden bint de [[Homo sapiens|mederne meansen]] naor Europe ekommen vanuut et [[Midden-Oosten]]. Vöndsten van mederne meansen uut de grotten van Misliya en Apidima (185.000 en 210.000 jaor old) in [[Griekenland]] wiest er op dät er al mederne meansen in [[Uropa]] waren veur 40.000 jaor eleden<ref>Apidima Cave fossils provide earliest evidence of ''Homo sapiens'' in Eurasia, https://www.nature.com/articles/s41586-019-1376-z</ref>. Toen et klimaot wärmer wier, trökken de mederne meansen vanuut wat in et [[Engels]] ''Last Glacial Maximum refugia'' hiet op et noorden an.
+Meer als 70.000 jaor eleden waren er [[Neanderthaler]]<nowiki/>s in [[Haorste]] te vinden. In de [[Bomhofsplas]] bint er in [[1988]] en [[1989]] resten van Neanderthalers evunden, waoronder een bewärkte [[voestbiele]]. Ook in [[Sekdoorn]] bint resten van Neanderthalers evunnen.<ref>Atlas van de Vecht, <nowiki>https://issuu.com/provicieoverijssel/docs/atlas_van_de_vecht_lr/56</nowiki></ref> Tiedens de iestieden was et alderbärstens kold. Uutendelik bint de Neanderthalers uut estörven. Ongeveer 40.000 jaor eleden bint de [[Homo sapiens|mederne meansen]] naor Europe ekommen vanuut et [[Midden-Oosten]]. Vöndsten van mederne meansen uut de grotten van Misliya en Apidima (185.000 en 210.000 jaor old) in [[Griekenland]] wiest er op dät er al mederne meansen in [[Uropa]] waren veur 40.000 jaor eleden.<ref>Apidima Cave fossils provide earliest evidence of ''Homo sapiens'' in Eurasia, https://www.nature.com/articles/s41586-019-1376-z</ref> Toen et klimaot wärmer wier, trökken de mederne meansen vanuut wat in et [[Engels]] ''Last Glacial Maximum refugia'' hiet op et noorden an.
 
-Deur vöndsten in de baodem is ebleken dät de er in umgeaving van Zwollerkärspel tiedens de Ni'je Stientied ([[Neolithicum]]) meansen waren (zie ook [[Swifterbandcultuur]]). Disse vöndsten bint onder meer in [[Spoelde]], [[Weensum]] en [[Ittersumerbroek]] edaone. In Ittersumerbroek bint fiene pielespitsies van [[Jager-verzamelaars|jager-verzameläärs]] evunden die uut de periode 2850-4200 v. Chr stamt. In de [[Bronstied]] was de situasie van et gebied slim veranderd, zoas uut een andere vöndst in Ittersumerbroek blik, wat de ''[[Woodhenge van Zwolle]]'' hiet. Disse kere waren er gien resten van jager-verzameläärs evunden, määr van [[Boer|boeren]]. Disse boeren leavden op leege zandköppies. Dit dekzand is tiedens de [[leste iestied]] tiedens et [[Weichselien]] oonze kaante op eblaozen. De boeren leavden veurnämelik van akkerbouw en veeteelt, määr ook de jacht en visseri'je waren nog altied belangrieke. Een dörp was de Woodhenge van Zwolle niet, ongeveer tiene töt twintig meansen leavden er per ginneraosie. Deur meer activiteit van de [[Iessel]] bint de boeren vot egaone.
+Deur vöndsten in de baodem is ebleken dät de er in umgeaving van Zwollerkärspel tiedens de Ni'je Stientied ([[Neolithicum]]) meansen waren (zie ook [[Swifterbandcultuur]]). Disse vöndsten bint onder meer in [[Spoelde]], [[Weensum]] en [[Ittersumerbroek]] edaone. In Ittersumerbroek bint fiene pielespitsies van [[jager-verzamelaars]] evunden die uut de periode 2850-4200 v. Chr stamt. In de [[Bronstied]] was de situasie van et gebied slim veranderd, zoas uut een andere vöndst in Ittersumerbroek blik, wat de ''[[Woodhenge van Zwolle]]'' hiet. Disse kere waren er gien resten van jager-verzameläärs evunden, määr van [[Boer|boeren]]. Disse boeren leavden op leege zandköppies. Dit dekzand is tiedens de [[leste iestied]] tiedens et [[Weichselien]] oonze kaante op eblaozen. De boeren leavden veurnämelik van akkerbouw en veeteelt, määr ook de jacht en visseri'je waren nog altied belangrieke. Een dörp was de Woodhenge van Zwolle niet, ongeveer tiene töt twintig meansen leavden er per ginneraosie. Deur meer activiteit van de [[Iessel]] bint de boeren vot egaone.
 
 == Geschiedenisse vanof de iezertied ==
 Et [[Iesseldal]] wier deur de tied hen gestaodig an natter. Dit is meugelik ook deur egaon nao et begin van de Romeinse tied in Nederlaand. De völle overstromingen hebt er veur ezörgt dät er vruchtbaore leegen klei wieren of ezet.            
@@ -40,7 +39,9 @@ Op de [[Spoelderbärg]] wieren vrogger in de [[middeleeuwen]] vergaderings ehöl
 
 == Geschiedenisse van de gemiente==
 [[Ofbeelding:Zwollerkerspel.gif|thumb|Grondgebied van Zwollerkärspel in 1867]]
-In [[1802]] wier het schoutambt Zwollerkärspel escheiden van de stad Zwolle in de tied van de [[Bataofse Rippebliek]] naor Frans veurbield. In [[Frankriek]] wieren toen dörpen en steden an mekaar geliek esteld. Veur 1802 wier het gebied bestuurd deur de stad Zwolle zelf. <ref>https://www.entoen.nu/nl/overijssel/salland/zwolle/zwollerkerspel</ref>
+In [[1802]] wier het schoutambt Zwollerkärspel escheiden van de stad Zwolle in de tied van de [[Bataofse Rippebliek]] naor Frans veurbield. In [[Frankriek]] wieren toen dörpen en steden an mekaar geliek esteld. Veur 1802 wier het gebied bestuurd deur de stad Zwolle zelf.<ref>https://www.entoen.nu/nl/overijssel/salland/zwolle/zwollerkerspel</ref>
+
+In sommige plaatsen van de vroggere gemiente, zo as beveurbield [[Bärkum (buurt)|Bärkum]] en [[Westenholte]], he-j nog et <nowiki>''</nowiki>Zwollerkärspelgevuul<nowiki>''</nowiki><ref>De Stem der Gemeente Zwollerkerspel & De opheffing van Zwollerkerspel (Peter Tijhaar)</ref> umdet et daor nog zo dörps andut.
 
 == Bestuur van de gemiente ==
 
