*Empty MediaWiki Message*

--- a/Moor_(meens).mw
+++ b/Moor_(meens).mw
@@ -39,6 +39,10 @@ De relasie van n moor mit heur kienders wörden an-eduud mit t woord ''[[moorsch
 ** ''moetje'' (informeel)
 ** ''olmìns(k)'' <small>(informeel, en maisttieds allenneg as der over aine zien aigen mouder proat wordt)</small>
 | valign=top |
+* [[Sallaands]]:
+** ''moe''
+** ''moo''
+** ''moeti''{{Info|Is wel iens gebruukt}}
 * [[Stellingwarfs]]: 
 ** ''mem''
 ** ''moeke''
