/* Foto's van de A28 */

--- a/Rieksweg_28.mw
+++ b/Rieksweg_28.mw
@@ -589,13 +589,13 @@ Hieronder ku-j de plaatse zien van bepaolde stokken A28 die in de filetop 50 stu
 <gallery widths="200" heights="200">
 Bestaand:Z.E. Korthals , een gedeelte van Rijsweg 28 tussen Harderwijk en Wezep opengeste, Bestanddeelnr 914-4340.jpg|Openstelling van de Rieksweg 28 tussen '''Harderwiek''' en '''Wezep''' (1962)
 Bestaand:Snelweg rond Utrecht.jpg|'''Knooppunt Rijnsweerd''' (kruusing met [[ring Utrecht]])
-Bestaand:RINGZwolle2 060.jpg|'''[[Iesselbrugge]]''' (Brug Katerveer (II)) in de richting van Zwolle (veur 2011)
+Bestaand:RINGZwolle2 060.jpg|'''[[Iesselbrugge]]''' (Brug Katerveer (II)) in de richting van Zwolle (tussen 2006 en 2010)
 Bestaand:IJsseltoren Zwolle.jpg|'''Ofslag 18:'''<br />Zwolle-Zuud met de [[Iesseltoren]]
 Bestaand:Hectometerpaal A28.jpg|'''Ofslag 20:'''<br />Zwolle-Noord met hectomeaterpaole (richting [[Grunnen (stad)|Grönning]])
 Bestaand:Koperen Hoogte.jpg|'''Ofslag 22:'''<br />[[De Koperen Hoogte]] (2005), hotel/restaurant in de veurmalige [[Watertoren (Lichtmis)|watertoren De Lichtmis]]
 Bestaand:A28 bij Hooghalen.jpg|De A28 ezeen vanof een viaduct körtbi'j Heughalen ([[Haolen]]) tussen de '''ofslagen 31 en 32'''
 Bestaand:De-witte-molen.jpg|Tussen de '''ofslagen 37 en 38''' Eelde ([[Eel]])/[[Haoren]]: [[De Witte Mölle]]
-Bestaand:A28 Verzorgingsplaats Witte Molen.JPG|Tussen de '''ofslagen 37 en 38''': verzörgingsplaats De Witte Mölle (de Witte Molen)  
+Bestaand:A28 Verzorgingsplaats Witte Molen.JPG|Tussen de '''ofslagen 37 en 38''': verzörgingsplaats De Witte Mölle (de Witte Molen)   
 </gallery>
 
 == Verwiezings ==
