Verwysing nå döärverwyssyde repareerd ([[Australië]] nå [[Australië (laand)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Acceptable_in_the_80s.mw
+++ b/Acceptable_in_the_80s.mw
@@ -1,6 +1,6 @@
 '''''Acceptable in the 80s''''' is een nommer van de [[Schotlaand|Schotse]] muzikant [[Calvin Harris]] van zien debuutalbum ''[[I Created Disco]]'' uut [[2007]]. In [[2006]] wier et nommer op enömmen en kwamp uut op [[12 meert]] 2007. Et nommer beheurt töt et genre [[Electro|Electro(-funk)]].
 
-In zowel [[Australië]] ([[ARIA Charts|ARIA]]) as et [[Verienigd Keuninkriek]] ([[British Phonographic Industry|BPI]]) hef et nommer een golden certificaot.
+In zowel [[Australië (laand)|Australië]] ([[ARIA Charts|ARIA]]) as et [[Verienigd Keuninkriek]] ([[British Phonographic Industry|BPI]]) hef et nommer een golden certificaot.
 
 == Muziekvideo ==
 In de muziekvideo, die reggiseerd is deur Woof Wan-Bau bint völle verwiezings nao de [[1980-1989|jaoren 80]] zo as de typische haorstielen en gebruukte kleuren. Ok wördt er deur önderzukers een sokpoppe ontleedt.
