*Empty MediaWiki Message*

--- a/Johanna_van_Buren_Cultuurprijs.mw
+++ b/Johanna_van_Buren_Cultuurprijs.mw
@@ -3,15 +3,15 @@ De '''Johanna van Buren Cultuurprijs''' is een drei-jaorlijkse pries veur lu die
 ==Winnaors==
 *'''1981: [[Marga Kool]]''' (veur heur volledige wark)
 :''Jury:'' [[Hendrik Entjes|H. Entjes]], [[Henk Krosenbrink|H. Krosenbrink]], [[Simon van Wattum|S. van Wattum]], [[Gerard Nijenhuis|G. Nijenhuis]]
-*1984: 
 *'''1987: [[Willem Wilmink]]''' (veur zien inzet veur 't [[Nedersaksisch]] middels zien publicaoties)
 :''Jury:'' [[Henk Bloemhoff|H. Bloemhoff]], [[Hendrik Entjes|H. Entjes]], [[Marga Kool|M. Kool]], M.J. Potman
-*1990: 
 *'''1993: [[Anne van der Meiden]]''' (veur zien inzet veur 't Nedersaksisch, in 't besunder 't [[Twèents]])
 *'''1996: [[Hendrik Entjes]]''' (veur zien hiele wark)
 :''Jury:'' J. Bouwhuis (veurzitter), J. Dijkstra, [[Anne van der Meijden|A. van der Meiden]], [[Hermann Niebaum|H. Niebaum]]
+*'''2002: [[Herman Finkers]]'''
 *'''2006: [[Bennie Jolink]]'''
 *'''2013: [[Daniël Lohues]]'''
+*'''2016: [[Jan Schoenaker]]'''
 
 ==Bronnen==
 *[http://www.literaireprijzen.nl/index.php?fuseaction=home.showPrijs&prijsnr=164 Letterkundig Museum: literaire prijzen.nl]
