--- a/Ni'j-Heeten.mw
+++ b/Ni'j-Heeten.mw
@@ -36,7 +36,7 @@ De [[Rooms-Katholieke Karke|Rooms-Katholieke Kärke]] [[Jozef van Nazareth]] is 
 [[RKSV Nieuw Heeten|SV Nieuw Heeten]] is een spörtvereniging in Ni'j Heeten en hef veer spörten önder zich: [[voetbal]], [[handbal]], [[volleybal]] en [[tennis]].
 
 === Feesten ===
-In et letste weekend van de [[bouwvakvekantie]] is er elk jaor een dörpsfeest: eet Bouwvakfeest. Dit feest duurt drie dagen en wördt örganiseert deur de [[carnavalsvereniging]] de Hekk'nsluuters. Met [[Koningsdag]] is er Orangepop.
+In et letste weekend van de [[bouwvakvekantie]] is er elk jaor een dörpsfeest: et Bouwvakfeest. Dit feest duurt drie dagen en wördt örganiseert deur de [[carnavalsvereniging]] de Hekk'nsluuters. Met [[Koningsdag]] is er Orangepop.
 
 == Luu die in Ni'j Heeten ewoont hebt ==
 
