*Empty MediaWiki Message*

--- a/Poorte_van_Zwolle.mw
+++ b/Poorte_van_Zwolle.mw
@@ -13,7 +13,7 @@
 | postcode=8041
 | soorte=Wiek
 |ofbeelding2=Map NL Zwolle Poort van Zwolle.PNG|oppervlak laand=2,27|oppervlak water=0,17|lokasie=|oppervlak=2,44}}
-'''Poorte van Zwolle''' ([[Nederlaands]]: ''Poort van Zwolle'') is een wiek in de gemiente [[Zwolle]]. De buurt bestaot uut drie verschillende buurten: [[Spoelde]], [[Voorst-A]] en [[Voorst-B]]. De wiek had in 2019 365 inwoners.
+'''Poorte van Zwolle''' ([[Nederlaands]]: ''Poort van Zwolle'') is een wiek in de gemiente [[Zwolle]]. De wiek bestiet uut drie verschillende buurten: [[Spoelde]], [[Voorst-A]] en [[Voorst-B]]. De wiek had in 2019 365 inwoners.
 
 == Galleri'je ==
 <gallery widths="400" heights="400">
