--- a/Poorte_van_Zwolle.mw
+++ b/Poorte_van_Zwolle.mw
@@ -17,7 +17,7 @@
 
 == Galleri'je ==
 <gallery widths="400" heights="400">
-ofbeelding:20150909 Grote Katerveersluis1 Willemsvaart Spoolde.jpg|Willemsvaort bi'j Spoelde met de Katerveersluus en de brug oaver de Iessel van de [[Rieksweg 28|A28]].
+ofbeelding:20150909 Grote Katerveersluis1 Willemsvaart Spoolde.jpg|Willemsvaort bi'j Spoelde met de [[Kaoterveersluus]] en de brug oaver de Iessel van de [[Rieksweg 28|A28]] ([[Iesselbrugge]]).
 </gallery>
 
 {{Dialekt|sdz}}
