--- a/Oostkolonisatie.mw
+++ b/Oostkolonisatie.mw
@@ -1,12 +1,12 @@
-[[ofbeelding:Historical German linguistical area.PNG|thumb|Deur de Oostkolonisatie scheuf de oostgreanse van het Heugduutse en Nedersaksische täälgebied richting het oosten en ontstunden er Nedersaksische en Duutstalige enclaves in Centraol- en Oost-Uropa]]
+[[ofbeelding:Historical German linguistical area.PNG|thumb|Deur de Oostkolonisatie scheuf de oostgreanse van et Heugduutse en Nedersaksische täälgebied richting het oosten en ontstunden er Nedersaksische en Duutstalige enclaves in Centraol- en Oost-Uropa]]
 [[ofbeelding:Deutsche Ostsiedlung.png|thumb|Verschillende faoses van de Oostkolonisatie ([[Walter Kuhn]])]]
 [[ofbeelding:West-Slavic peoples until 1125.jpg|thumb|Slavische volker rond [[1125]]]]
 [[ofbeelding:Deutsche Siedlungsgebiete in Osteuropa 1925.jpg|thumb|Verspreidink van etnische Duutsers in Oost-Uropa in [[1925]]]]
 [[ofbeelding:Bevölkerung Mitteleuropas um 895.jpg|thumb|De oostkolonisatie nao de [[vrogge middeleeuwen]]]]
 [[ofbeelding:Brockhaus 1894 Deutsche Mundarten.jpg|thumb|Het West-Germaonse [[dialectcontinuüm]] (zonder Fries) in 1894]]
-'''Oostkolonisatie''' ([[Duuts]]: ''Ostsiedlung'') is nen term veur de trek van kolonisten uut et Heilige Roomse Riek naor Slavische en Baltische gebieden in Centraol- en Oost-Europa in de [[middeleeuwen]]. Et woord is rechtstreeks uut et Duuts vertaold (''Ostkolonisation''). Et word deur de mieste moderne geschiedkundigen ofewezen, umdät et betekent dat "leeger ontwikkelde laanden en volker" bezet en uutebuit wörden deur nen butenlandse macht. 
+'''Oostkolonisatie''' ([[Duuts]]: ''Ostsiedlung'') is nen term veur de migratie van kolonisten uut et Heilige Roomse Riek naor Slavische en Baltische gebieden in Centraol- en Oost-Europa in de [[middeleeuwen]]. Et woord is rechtstreeks uut et Duuts vertaold (''Ostkolonisation''). Et wörd deur de mieste modärne geschiedkundigen ofeweazen, umdet et betekent dat "leeger ontwikkelde laanden en volker" bezet en uutebuit wörden deur nen butenlaandse macht. 
 
-Veur een paar gevallen kloppen dat wel; de gebieden tussen Elbe en Oder wörden veroverd deur veural Saksische härtogen. Ook de Baltische Pruusen wörden deur de Duutse Orde in enömmen. In de mieste andere gebieden waren et veural Slaviese vörsten, leegere adel en kloosters die uutneudigen tot 'kolonisatie'. Daor past misskien dus de term 'immigraotie' better. De kolonisten en Slavische inheemsen leafden daor al lange naost mekare, maer smölten uutendelik töt ene bevolking samen. Die gebruukten [[Nederduuts]] dialekten en gongen uutendelik oaver op et [[Hoogduuts]]. In de moderne geskiedenisopvatting is de angelegenheid van de Oostkolonisatie niet meer korrekt; et wörden in et verleden deur Duutse nationalisten ja misbruukt. Mar dät zegt natuurlik niks oaver et geskiedkundig belang.
+Veur een paar gevallen was det wel waor: de gebieden tussen de [[Elve]] en [[Oder]] wörden veroverd deur veural Saksische härtogen. Ook de [[Baltische Pruusen]] wörden deur de [[Duutse Orde]] in enömmen. In de mieste andere gebieden waren et veural Slaviese vörsten, leegere adel en kloosters die uutneudigen tot 'kolonisatie'. Daor past misskien dus de term 'immigraotie' better. De kolonisten en Slavische inheemsen leafden daor al lange naost mekare, maer smölten uutendelik töt ene bevolking samen. Die gebruukten [[Nederduuts|Nederduutse]] dialecten en gungen uutendelik oaver op et [[Hoogduuts]]. In de modärne geskiedenisopvatting is de angelegenheid van de Oostkolonisatie niet meer juust; et wörden in et verleden deur Duutse nationalisten ja misbruukt. Mar dät zegt natuurlik niks oaver et geskiedkundig belang.
 
 == De kolonisatie ==
 De Slavische stammen die ten oosten van 't Heilige Roomse Riek leafden waren veurnaomelik arme boeren (horigen) tegenoaver de pläätselike adel. Dit bracht gien veuruutgangk in landbouw en ambacht. Het verhinderde ook dät er onofhankelike steden zich vörmden met nen eigen bestuur en rechtspraok maar, 't verhinderde ok 't onstaon van [[gilde]]n.
