--- a/Oostkolonisatie.mw
+++ b/Oostkolonisatie.mw
@@ -9,7 +9,7 @@
 Veur een paar gevallen was det wel waor: de gebieden tussen de [[Elve]] en [[Oder]] wörden veroverd deur veural Saksische härtogen. Ook de [[Baltische Pruusen]] wörden deur de [[Duutse Orde]] in enömmen. In de mieste andere gebieden waren et veural Slaviese vörsten, leegere adel en kloosters die uutneudigen tot 'kolonisatie'. Daor past misskien dus de term 'immigraotie' better. De kolonisten en Slavische inheemsen leafden daor al lange naost mekare, maer smölten uutendelik töt ene bevolking samen. Die gebruukten [[Nederduuts|Nederduutse]] dialecten en gungen uutendelik oaver op et [[Hoogduuts]]. In de modärne geskiedenisopvatting is de angelegenheid van de Oostkolonisatie niet meer juust; et wörden in et verleden deur Duutse nationalisten ja misbruukt. Mar dät zegt natuurlik niks oaver et geskiedkundig belang.
 
 == De kolonisatie ==
-De Slavische stammen die ten oosten van 't Heilige Roomse Riek leafden waren veurnaomelik arme boeren (horigen) tegenoaver de pläätselike adel. Dit bracht gien veuruutgangk in landbouw en ambacht. Het verhinderde ook dät er onofhankelike steden zich vörmden met nen eigen bestuur en rechtspraok maar, 't verhinderde ok 't onstaon van [[gilde]]n.
+De Slavische stammen die ten oosten van 't Heilige Roomse Riek leafden waren veurnaomelik ermoejoge boeren (horigen) tegenoaver de pläätselike adel. Dit bracht gien veuruutgangk in laandbouw en ambacht. Het verhinderde ook dät er onofhankelike steden zich vörmden met nen eigen bestuur en rechtspraok maar, 't verhinderde ok 't onstaon van [[gilde]]n.
 
 
 {{Dialekt|sdz}}
