*Empty MediaWiki Message*

--- a/Selderie.mw
+++ b/Selderie.mw
@@ -3,7 +3,7 @@
 
 Verschillende varianten van selderie wördt gebruukt deur meansen. Dit bint [[bladselderie]] (''Apium graveolens'' var. ''secalinum''), [[bleekselderie]] (''A. graveolens'' var. ''dulce'') en [[knolselderie]] (''A. graveolens'' var. ''rapaceum''). Van zowel bleekselderie as bladselderie wördt de bladstelen egetten, van bladselderie ook de blader. Van knolselderie wördt de knolle egetten die körtbi'j boaven de grond gruuit. Ook de ni'je jonge blader van knolselderie bint goed te etten. Van alle drie de vörmen wördt ook soep emaakt.
 
-Van de meansen die [[voedselallergie]] hebt kump die veur selderie vrie väke veur.
+Bi'j meansen die [[voedselallergie]] hebt kump een allergie veur selderie vrie väke veur.
 
 In de [[Oldheid]] had ze de [[selderiekrans]] als pries van de [[Nemeïsche Spöllen]] ter ere van [[Zeus]].
 
