*Empty MediaWiki Message*

--- a/Amersfoort.mw
+++ b/Amersfoort.mw
@@ -26,7 +26,7 @@ webstee = [http://www.amersfoort.nl/ www.amersfoort.nl] |
 |}
 '''Amersfoort''' ([[Utrechts-Alblasserweerds]]: ''Aomersfoort'') is n stad en gemeente in de [[Nederlaand|Nederlandse]] provinsie [[Utrecht (provinsie)|Utrecht]]. De gemeente had op 1 mei 2013 oengeveer 150.088 inwoeners. t Is in bevolkingsantal de tweede [[Stad (woonstee)|stad]] van de provinsie [[Utrecht (provinsie)|Utrecht]] en de zeuventiende van [[Nederlaand|Nederland]]. In Amersfoort wort van oorsprong n [[Nedersaksies]] [[dialekt]] epraot, mar t is vandaag de dag vriewel uutestörven.
 
-De bekendste Amersfoorter is oengetwiefeld [[Piet Mondriaan]].en Chémee Hørseling
+De bekendste Amersfoorter is oengetwiefeld [[Piet Mondriaan]].
 
 == Geschiedenis ==
 De plek, ontsting bie n deurwaodbaore plek (''voord'') in de Eem (''Amer'') wier veur t eerst enoemd in [[1028]]. Vanwege zien ligging ging de bisschop van Utrecht in Amersfoort woenen, um n hof an te leggen, en daorvanuut [[Gelderse Vallei]] te ontginnen. In [[1259]] kreeg de plek [[stadsrechten]]. Laoter in de [[middeleeuwn|middeleeuwen]] kwam de plek deur n [[woender]] op as pelgrimsstad, waordeur de Onzelievevrouwekark in [[1444]] ebouwd kon worren. De kark ging laoter verleuren, de toren staot der nog altied. Oek had de stad in de laote middeleeuwen n uutzoenderlik grote [[beer]]industrie.
