Nou mooi, bu-w dus niet de eersten...

--- a/A6_(Kazachstan).mw
+++ b/A6_(Kazachstan).mw
@@ -1,4 +1,4 @@
-De '''A6''' is een heufdweg in [[Kazachstan]] en lig in het zuudoosten van et laand. De weg is 115 kilometer lang en löp van [[Kokpek]] langes [[Kegen]] nao [[Karkara]] hen bi'j de greanse met [[Kirgizië]].
+De '''A6''' is een heufdweg in [[Kazachstan]] en lig in het zuudoosten van et laand. De weg is 115 kilometer lang en löp van [[Kokpek]] langes [[Kegen]] nao [[Karkara]] hen bi'j de greanse met [[Kirgizië]]. De weg is onderdiel van de [[Europese weg 011|e011]].
 
 == Wegbeschrieving ==
 De A6 begint vanof de [[A2 (Kazachstan)|A2]] en de [[A5 (Kazachstan)|A5]] en löp dan eerst nao Kegen. Hiernao giet de weg nao et zuden hen nao de greans met [[Kirgizië]]. Et gebied hier is ien van de weinige gebieden in et [[Tian Shangebergte]] det leger lig. De greans met Kirgizië lig op zo'n 2000 meter heugte. De weg is niet echt as een heufdweg ebouwd (dus secundair) umdet er gien grote plaatsen langes de weg ligt, maar et is wel ien van de weinige wegen vanuut [[Kazachstan]] nao Kirgizië hen. In Kirgizië löp de weg deur en ku-j in de richting van [[Tyup]] nao et [[Issyk Koelmeer]] ([[A362 (Kirgizië)|A362]]) gaon of richting [[Jergalan]] ([[A364 (Kirgizië)|A364]]). 
