*Empty MediaWiki Message*

--- a/Zalt.mw
+++ b/Zalt.mw
@@ -2,5 +2,5 @@
 * [[keukenzalt]] of [[zeezalt]]
 * [[struizalt]] - gebruukt veur gladheidsbestrieding van wegen
 * [[zalt (smaak)]] - een smaak die-w pruven kunt.
-
+* [[saliniteit]] of zaltheid
 {{dv}}
