--- a/Zalt_(smaak).mw
+++ b/Zalt_(smaak).mw
@@ -11,6 +11,7 @@ Aandere monovalente ionen, bieveurbeeld ammonium, NH4+, en divalente ionen van d
 *[[Achterhooks]]: ''zalt'', ''zolt''
 *[[Drèents]]: ''zolt''
 *[[Grunnegs]]: ''solt'', ''zolt''
+*[[Sallaands]]: ''zolt''
 *[[Stellingwarfs]]: ''zolt'', ''zoolt''
 *[[Tweants]]: ''zolt'', ''zoolt''
 *[[Urkers]]: ''zout''
