*Empty MediaWiki Message*

--- a/Zalt.mw
+++ b/Zalt.mw
@@ -3,4 +3,5 @@
 * [[struizalt]] - gebruukt veur gladheidsbestrieding van wegen
 * [[zalt (smaak)]] - een smaak die-w pruven kunt.
 * [[saliniteit]] of zaltheid
+* [[zalten]] - een groep chemyske stoffen
 {{dv}}
