Verwysing nå döärverwyssyde repareerd ([[Zolt]] nå [[zalten]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Salinen.mw
+++ b/Salinen.mw
@@ -1,7 +1,9 @@
-'''Salinen''' bint zoltwinningsbedrieven in [[Duutslaand]]. In [[Nederlaand]] wördt ok [[zolt]] ewönnen bi'j [[Bokel (Eanske)|Boekelo]], maar das een aandere maniere van zoltproduksie.
+'''Salinen''' bint zoltwinningsbedrieven in [[Duutslaand]]. In [[Nederlaand]] wördt ok [[zalten|zolt]] ewönnen bi'j [[Bokel (Eanske)|Boekelo]], maar das een aandere maniere van zoltproduksie.
+
 ==Zolt==
 Hoewel der ok zolt ewönnen wördt uut zeewater, bevat de bodem op grote diepte ok zoltholdend gestiente. Over de grenze maakt ze doar gebruuk van um zolt te winnen.
 Het zolte water wördt op n diepte van zo'n 3000 meter op-epompt,  in "''Gradierwerke''" verdikt en in zoltziederi'jen deur verhitting van t leste water ontdoan en edreugd tut keukenzolt.
+
 ==Gradeerwarken (''Gradierwerke'')==
 Grote stellages (''Gerüste'') van [[Eek (boom)|eken- of grenenholten]] balken wördt evuld mit takkebossen van "''Schwarzdorn''".
 Bovenlanks lig een geute woar het op-epompte zolte water overlöp en deur de takkebossen rieselt. Deur de wind, die tussen de takken deurweait,  wördt een groot diel van  het water uutedampt, het brein wördt op-evangen in grote bakken onder het gradeerwark. Vandoar wördt het  noar de zoltziederi'je epompt, woar het verder tut keukenzolt wördt verwarkt. De mieste zoltfebrieken warkt tegenwoordig heel aanders. De gradeerwarken stoat der veurnamelik as toeristiese attraksie en ok veur mensen die wat an de luchwegen hebt.
@@ -16,7 +18,6 @@ De plasen in Duutslaand, woar zo'n gradeerwark stiet, hebt doar slim gebruuk van
 [[Rheine]], [[Bad Iburg]], [[Bad Driburg]], [[Bad Salzuflen]] en [[Bad Rothenfelde]] ([[:nl:Bad Rothenfelde]]), bi'jveurbeeld, bint vanuut Oost Nederlaand makkelik te berieken. De lest enuumde 2 plasen bint heel antrekkelik. Een plein mit rondumme gradeerwarken en een mooi kuurpark.
 
 ==Zoltwarken in beeld==
-
 <gallery>
 Ofbeelding:salz01.jpg|Bad Salzuflen
 Ofbeelding:salz02.jpg|Gradierwerk Bad Salzuflen (Gradeerwark)
@@ -24,6 +25,7 @@ Ofbeelding:salz03.jpg|Gezoonde lucht
 Ofbeelding:Gradierwerk Innengerüst BS.jpg|Onderhold gradeerwark
 Ofbeelding:Gradierwerk Saline Gottesgabe Rheine.jpg|Rheine
 </gallery>
+
 {{Dialekt|sdz}}
 
 [[Kategorie:Industrie]]
