Verwysing nå döärverwyssyde repareerd ([[China]] nå [[Chinese keizerriek]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Ulan_Bator.mw
+++ b/Ulan_Bator.mw
@@ -10,7 +10,7 @@ De stad leijt 1350 meter boaven de zee in et däl van den [[Tuul]], een ziedstro
 Ulan Bator is de koldste heufdstad op de wearld. In de [[winter]] kan et -40 gröä celcius wodden moar in de [[zommer]] +35. Reagen is der veural in de [[zommer]]. In het [[steppeklimaot]] is der neet hil völle reagen. 
 
 == Historie ==
-Um en bie 1640 was der op de plaotse woar noe Ulan Bator steet een plaots de Örgöö neumt wier. Örgöö meent ''paleis'' in et [[Mongools]] en wier deur de [[Ruslaand|Russen]] verbasterd tut Urga. Deur de [[Mongolië|Mongolen]] zölf wier de name Örgöö neet echt gebroekt. Tut in de 20e eeuwe numen de Mongolen de stad  Da Khüree (groop gebouwen in nen cirkel). De stad was een handelscentrum tusken [[Ruslaand|Russen]], [[Mongolië|Mongolen]] en [[China|Chinäsen]] en lieketieds et [[godsdienst|rilligjeuze]] centrum van et land.
+Um en bie 1640 was der op de plaotse woar noe Ulan Bator steet een plaots de Örgöö neumt wier. Örgöö meent ''paleis'' in et [[Mongools]] en wier deur de [[Ruslaand|Russen]] verbasterd tut Urga. Deur de [[Mongolië|Mongolen]] zölf wier de name Örgöö neet echt gebroekt. Tut in de 20e eeuwe numen de Mongolen de stad  Da Khüree (groop gebouwen in nen cirkel). De stad was een handelscentrum tusken [[Ruslaand|Russen]], [[Mongolië|Mongolen]] en [[Chinese keizerriek|Chinäsen]] en lieketieds et [[godsdienst|rilligjeuze]] centrum van et land.
 
 
 
