*Empty MediaWiki Message*

--- a/Šiprage.mw
+++ b/Šiprage.mw
@@ -1,95 +1,90 @@
-'''Šiprage''' (Bosnies, Kroaties en Servies: Šiprage; Sirillies skrift: Шипраге), vake in et [[Bosnië-Herzegovina]] ook Bosnië neumd, [[Banja Luka]], op de Balkan.<ref>http://www.kartabih.com/</ref><ref>Vojnogeografski institut, Ed. (1962): Šiprage (List karte 1:25.000, Izohipse na 10 m). Vojnogeografski institut, Beograd / Military Geographical Institute, Ed. (1962): Šiprage (map sheet 1: 25.000, Contour lines at 10 m). Military Geographical Institute, Belgrade.</ref>
+'''Šiprage''' ([[bosnisk]], [[kroatisk]] en [[servisk]]: Šiprage; Cyrillisk skrift: Шипраге), is en gemeynschop in [[Bosnië-Herzegovina]].<ref>http://www.kartabih.com/</ref><ref>Vojnogeografski institut, Ed. (1962): Šiprage (List karte 1:25.000, Izohipse na 10 m). Vojnogeografski institut, Beograd / Military Geographical Institute, Ed. (1962): Šiprage (map sheet 1: 25.000, Contour lines at 10 m). Military Geographical Institute, Belgrade.</ref> De gemeynschop lig in de gemeynde [[Kotor Varoš]] en had in [[2013]] 788 inwoaners. In [[1991]] had et nog 952 inwoaners. De plaatse lig in de [[Serviske Republyk]].
 
-
-[[File:Coat of arms of Bosnia and Herzegovina.svg|thumb|100px|]]
-[[File:Location Bosnia-Herzegovina Europe.png|thumb|250px|]]
 ==Klimaat==
-{| border="1" cellpadding="4" cellspacing="0" class="toccolours" 0.5em solid #999; 100%
-|- style="text-align:center;" 
-|style="background:pink|[[File:Lunar libration with phase2.gif|thumb|150px|]]  
-|style="background:#dfd; "|'''Ø t°'''<br/> (°C)
-|  style="background:pink|'''Min.  t°''' <br>(°C)
-| style="background:#dfd; "|'''Max.  t°'''<br>(°C)
-| style="background:pink| '''↓↓↓''' <br/>(mm)
-|-style="text-align:center;" 
-| style="background:lightblue| '''I'''
-| –1,7
-| –4,8
+{| class="wikitable" style="text-align: center;"
+|-
+! rowspan="2" | Månd
+! colspan="3" | Temperatuur (°C)
+! rowspan="2" | Neyrslag<br />(mm)
+|-
+! Mediaan !! Minimum !! Maximum
+|-
+| style="text-align: left;" | Januari
+| −1,7
+| −4,8
 |1,4
 |59
-|-style="text-align:center;" 
-| style="background:lightblue|'''II'''
+|-
+| style="text-align: left;" | Februari
 |0,3
-| –3,6
+| −3,6
 |4,2
 |63
-|-style="text-align:center;" 
-|'''style="background: bgcolor="#F5DEB3" |'''III''' 
+|-
+| style="text-align: left;" | Määrt
 |4,6
-| –0,1
+| −0,1
 |9,3
 |59
-|-style="text-align:center;" 
-| style="background:#ddffdd;fff3;''|'''IV''' 
+|-
+| style="text-align: left;" | April
 |9,1
 |3,9
 |14,3
 |74
-|-style="text-align:center;" 
-| style="background:lightgreen|'''V'''
+|-
+| style="text-align: left;" | Mei
 |13,6
 |8,1
 |19,2
 |90
-|-style="text-align:center;" 
-| style="background:lightgreen|'''VI'''
+|-
+| style="text-align: left;" | Juni
 |17,2
 |11,5
 |22,9
 |99
-|-style="text-align:center;" 
-| style="background:pink|'''VII''' 
+|-
+| style="text-align: left;" | Juli
 |18,9
 |12,6
 |25,3
 |81
-|-style="text-align:center;" 
-| style="background:red|'''VIII''' 
+|-
+| style="text-align: left;" | Augustus
 |18,4
 |11,9
 |24,9
 |76
-|-style="text-align:center;" 
-| style="background:#dfd;"|'''IX'''
+|-
+| style="text-align: left;" | September
 |14,7
 |8,6
 |20,9
 |71
-|-style="text-align:center;" 
-|'''style="background: bgcolor="#F5DEB3" |'''X''' 
+|-
+| style="text-align: left;" | Oktober
 |9,5
 |4,7
 |14,4
 |79
-|-style="text-align:center;" 
-|'''style="background: bgcolor="#C2B280" |'''XI''' 
+|-
+| style="text-align: left;" | November
 |4,4
 |1,0
 |7,8
 |100
-|-style="text-align:center;" 
-| style="background:lightblue|'''XII'''
+|-
+| style="text-align: left;" | Desember
 |0,1
-|–2,7
+|−2,7
 |3,0
 |88
 |}<ref>https://en.climate-data.org/location/905786/</ref>
-==Bewolking==
-[[File:Grafika.png|thumb|left|500x300px|Bewolking 1961-2013]]
 
-==Reference==
+==Verwysings==
 <references/>
-==Web==
+==Websteas==
 {{Commonscat|Šiprage}}
 * http://opstinakotorvaros.com/ 
 *http://www.maplandia.com/bosnia-and-herzegovina/republika-srpska/siprage/ Maplandia
@@ -99,5 +94,5 @@
 *http://www.satellitecitymaps.com/europe-map/bosnia-and-herzegovina-map/federation-of-bosnia-and-herzegovina-map/%C5%A1iprage-map/
 *http://www.distancesfrom.com/distance-from-Siprage-to-Banja-Luka-Bosna-i-Hercegovina/DistanceHistory/5243320.aspx
 *http://www.udaljenosti.com/bosna/- Distances in B&H
-
+{{Dialekt|sdz}}
 [[Kategorie:Bosnië-Herzegovina]]
