*Empty MediaWiki Message*

--- a/Within_Temptation.mw
+++ b/Within_Temptation.mw
@@ -92,4 +92,6 @@ Met het uutkommen van de single ''[[Mother Earth]]'' en het spöllen op het grot
 *[[Richard van Leeuwen]] – drums (1998)
 *[[Richard Willemse]] – drums (1996)
 
+{{Dialekt|sdz}}
+
 [[Kategorie:Nederlaandse muziekgroep]]
