*Empty MediaWiki Message*

--- a/Wietkafee.mw
+++ b/Wietkafee.mw
@@ -82,4 +82,5 @@ Sinds t [[rookverbod]] veur de [[horeca]], dat op 1 juli 2008 ingung, is t roken
 {{Commonscat|Cannabis coffee shops in the Netherlands}}
 * [http://www.om.nl/vragen/drugs/ ''An welke veurweerden mut n wietkafee voldoon ?''], zied bie t Openbaor Ministerie.
 
+{{Dialekt|wvel}}
 [[Kategorie:Bedwelmingsmiddels]]
