--- a/Vlagge_van_Eibarge.mw
+++ b/Vlagge_van_Eibarge.mw
@@ -8,6 +8,9 @@ De '''vlagge van [[Eibarge]]''' is blauw met links 5, 3 en 1 gelle veerkanten en
 == Referenties ==
 <references />
 
+{{Dialekt|act}}
+
 {{DEFAULTSORT:Vlagge Van Eibarge}}
+
 [[Kategorie:Berkelland]]
 [[Kategorie:Vlagge|Eibarge]]
