*Empty MediaWiki Message*

--- a/Veliko_Tarnovo.mw
+++ b/Veliko_Tarnovo.mw
@@ -1,5 +1,6 @@
 '''Veliko Tarnovo''' ([[Bulgaars]]: Велико Търново) is de heuwdstad van den [[Europa (werelddeel)|Europesen]] stoat [[Bulgarije]] van [[1185]] - [[1393]].
 
+==Gallerie==
 <gallery>
 Veliko Tarnovo002.JPG
 Крепостта Царевец.jpg
@@ -11,6 +12,6 @@ G.k. Varusha - north, 5000 Veliko Tarnovo, Bulgaria - panoramio (6).jpg
 TurnovoChurch.jpg
 SS. Forty Martyrs Church.jpg
 </gallery>
-
+{{Dialekt|twd}}
 
 [[Kategorie:Stad in Bulgarije]]
