--- a/Station_Wenters.mw
+++ b/Station_Wenters.mw
@@ -11,5 +11,6 @@ Van en noar Wenters riedt elk half uur de volgende treinen van [[Arriva]], disse
 *Spoor 1a: [[Stoptrein]] Winters – [[Station Zutfent|Zutfent]]
 *Spoor 1b: Stoptrein Wenters – [[Station Doetinchem|Doetinchem]] – [[Station Zevenaar|Zevenaar]] – [[Station Arnem|Arnem]]
 
+{{Dialekt|act}}
 [[Kategorie:Spoorwegstation in Gelderlaand|Wenters]]
 [[Kategorie:Wenters]]
