*Empty MediaWiki Message*

--- a/SS_Espagne_(Anversois,_1909).mw
+++ b/SS_Espagne_(Anversois,_1909).mw
@@ -14,5 +14,6 @@ Et vrak werd ontdekt op een diepte van 40 meter.
 == Rifferenties ==
 <references />
 
+{{Dialekt|gos}}
 [[Kategorie:Skip]]
 [[Kategorie:Geschiedenis van België]]
