*Empty MediaWiki Message*

--- a/Peerd_van_Ome_Loeks.mw
+++ b/Peerd_van_Ome_Loeks.mw
@@ -23,4 +23,5 @@ De regel ''"hartstikke dood"'' wordt ook wel zongen as ''"hailendal dood"''.
 {{commonscat}}
 
 {{DEFAULTSORT:Peerd Van Ome Loeks}}
+{{Dialekt|gos}}
 [[Kategorie:Grunnen]]
