--- a/Oldambtsters.mw
+++ b/Oldambtsters.mw
@@ -71,4 +71,5 @@ t [[Reiderlaands]] is t dialekt dat proat wordt tuzzen de Nederlaands-Duutse sto
 
 [[Ofbeelding:Oldambtsters.GIF|250px|left|thumb|Lokoatsie van t Oldambtsters ien Nederlaand]]
 
+{{Dialekt|gos}}
 [[Kategorie:Grunnegs|*]]
