*Empty MediaWiki Message*

--- a/Liest_van_Leegsaksische_draank.mw
+++ b/Liest_van_Leegsaksische_draank.mw
@@ -162,6 +162,6 @@ Roond t negende joarhoonderd was der in Tweante al wienbouw. In de buurte van de
 -->
 
 {{DEFAULTSORT:Leegsaksische Draank Liest}}
-
+{{Dialekt|gos}}
 [[Kategorie:Nedersaksiese kultuur|Draank Liest]]
 [[Kategorie:Lysten|Leegsaksische draank]]
