*Empty MediaWiki Message*

--- a/Ins.mw
+++ b/Ins.mw
@@ -43,6 +43,6 @@ Uitkijktoren met een open stalen overkapping - Ens - 20409850 - RCE.jpg|Eutkiekt
 * Wiert Omta, burregemèèster
 
 {{Commonscat|Ens}}
-
+{{Dialekt|urs}}
 [[Kategorie:Noordoostpolder]]
 [[Kategorie:Plaotse in Flevolaand]]
