*Empty MediaWiki Message*

--- a/Harry_Mulisch.mw
+++ b/Harry_Mulisch.mw
@@ -1,14 +1,40 @@
 {{Infobox schriever
 | name           = Harry Mulisch
 | afbealding     = Harry Mulisch 2010.JPG
-| ümskryving     = Harry Mulisch (5 maart 2010)
+| ümskryving     = Harry Mulisch (5 meert 2010)
 | geboaren       = [[29 juli]] [[1927]]
 | störven        = [[30 oktober]] [[2010]]
 | land           = [[Nederlaand]]
 | websteade      = 
 }}'''Harry Mulisch''' ([[Haorlem]], [[29 juli]] [[1927]] - [[Amsterdam]], [[30 oktober]] [[2010]]) was een [[Nederlaand]]se schriever.
 
+== Ewunnen priezen ==
+Hieronder stiet een lieste nao tied van welke priezen Mulisch ewunnen hef:
+* 1951 – [[Reina Prinsen Geerligspries|Reina Prinsen Geerligsprijs]] veur ''archibald strohalm''
+* 1957 – [[Bijenkorf-literatuurpries|Bijenkorf-literatuurprijs]] veur ''Het zwarte licht''
+* 1957 – [[Anne Frank-pries]] veur ''archibald strohalm''<ref>[https://resolver.kb.nl/resolve?urn=ddd:010677601:mpeg21:a0268 'De Anne Frank-prijzen voor het jaar 1957'], ''Nieuwsblad van het Noorden'', 25 januari 1958.</ref>
+* 1961 – [[Athos-pries]] groot [[Nederlandse gulden|ƒ]] 1000,- veur zien hiele bibliografie<ref>[https://resolver.kb.nl/resolve?urn=ddd:010677840:mpeg21:a0172 'Athos-prijs voor Harry Mulisch'], ''Nieuwsblad van het Noorden'', 3 november 1961.</ref>
+* 1961 – [[ANV-Visser Neerlandia-pries]] veur ''Tanchelijn''
+* 1963 – [[F. Bordewijk-prijs|Vijverbergpries]] veur ''De zaak 40/61''
+* 1977 – [[Constantijn Huygenspries]] veur zien hiele bibliografie
+* 1977 – [[Cestoda-pries]]
+* 1977 – [[P.C. Hooft-pries]] veur zien hiele bibliografie
+* 1986 – [[Diepzee-pries]] veur ''De aanslag''
+* 1993 – [[Multatulipries]] veur ''De ontdekking van de hemel''
+* 1993 – [[Mekka-pries]] veur ''De ontdekking van de hemel''
+* 1995 – [[Pries der Nederlandse Letteren]] veur zien hiele bibliografie
+* 1999 – [[Libris Literatuur Pries]] veur ''De procedure''
+* 1999 – [[Prix Jean Monnet de Littérature Européenne]] veur ''De ontdekking van de hemel''
+* 2003 – [[De Inktaap]] veur ''Siegfried''
+* 2007 – [[Prix européen des jeunes lecteurs]] veur ''Siegfried''
+* 2007 – [[Eredoctoraat]] an de [[Universiteit van Amsterdam]]
+* 2007 – Italiaanse [[Percoto|Nonino-pries veur literatuur]]
+* 2007 – [[Lieste van beste Nederlandstaalige boeken|Beste Nederlandse roman aller tieden]] veur ''De ontdekking van de hemel''
+
 == Bibliografie ==
+Tiedens zien leaven hef Mulisch een hiele haop boeken eschreaven. Hieronder staot er een paor:
+
+Bekiek ook de ''[[Bibliografie van Harry Mulisch]]''.
 * [[archibald strohalm]] (1952)
 * [[Het stenen bruidsbed]] (1959)
 * [[Twee vrouwen]] (1975)
@@ -21,5 +47,5 @@
 * [[Siegfried (roman)|Siegfried]] (2001)
 
 {{Commonscat|Harry Mulisch}}
-
+{{Dialekt|sdz}}
 [[Kategorie:Nederlaandse schriever|Mulisch, Harry]]
