*Empty MediaWiki Message*

--- a/Geofiksie.mw
+++ b/Geofiksie.mw
@@ -7,5 +7,6 @@ In geoverzinseln kan aales ebruukt wordn wat nen geoverzinner good enoog veendt 
 == Maniern van dr teagnankiekn ==
 n Deil van de geoverzinners doot t allene veur de leukigheaid, woarbiej zee t spel-elemeant benoadrukt. Hierbiej wör ök krenks vaak deurverweazn noar t saamn warkn an disse laandn, det de letste joarn wat meer in t gebruuk is ekömn deur t internet det in better ebruuk ekömn is. Disse projektn zeent vaak humoristies en parodiejeernd, mear soms könt disse meansken ok nog met nieje pollitieke inzichtn komn.
 
+{{Dialekt|twd}}
 [[Kategorie:Geografie]]
 [[Kategorie:Fiksie]]
