--- a/Agnez_Mo.mw
+++ b/Agnez_Mo.mw
@@ -1,6 +1,6 @@
 [[Bestaand:Agnes at AMI 2004.jpg|thumb|Agnez Mo]]
 '''Agnes Monica Muljoto''' (Jakarta, [[1 juli]] [[1986]]), beter bekend onder der artiestennaam '''Agnez Mo''', is n [[Indonezie|Indoneense]] [[zanger]]es, [[liedjesschriever]] en [[akteur|aktrise]].
-
+{{Begin}}
 {{DEFAULTSORT:Mo, Agnez}}
 [[Kategorie:Indonezie]]
 [[Kategorie:Muzikaant]]
