--- a/Dialexicon_Twents.mw
+++ b/Dialexicon_Twents.mw
@@ -1,4 +1,4 @@
-t ''Dialexicon Twents'' is n digitaal vertaalweurdnbook [[Tweants]]-Nederlaands / [[Nederlaands]]-Tweants. De samensteller is [[Goaitsen van der Vliet]]. t Weurdnbook geet oet van die zien [[Standaard Schriefwieze]] vuur t Tweants.
+t '''''Dialexicon Twents''''' is n digitaal vertaalweurdnbook [[Tweants]]-Nederlaands / [[Nederlaands]]-Tweants. De samensteller is [[Goaitsen van der Vliet]]. t Weurdnbook geet oet van die zien [[Standaard Schriefwieze]] vuur t Tweants.
 
 t Windows-program, met oonderwiel meer as 58.000 Tweantse trefweurde en 33.000 oetdrukkingn, is vuur niks van t Internet te haaln.<ref>[http://members.home.nl/dialexicon/index.htm Webstee van t Dialexicon Twents]</ref>
 
