*Empty MediaWiki Message*

--- a/Dialexicon_Twents.mw
+++ b/Dialexicon_Twents.mw
@@ -4,6 +4,5 @@ t Windows-program, met oonderwiel meer as 58.000 Tweantse trefweurde en 33.000 o
 
 ==Rifferenties==
 <references />
-
-[[Kategorie:Tweants]]
+{{Dialekt|twd}}
 [[Kategorie:Nedersaksiese schrieveri'je]]
