*Empty MediaWiki Message*

--- a/Diek_(weg).mw
+++ b/Diek_(weg).mw
@@ -28,5 +28,5 @@ Veurbielden:
 <references />
 
 {{Dia|Dit stok is eschreven in 't [[Zuudwest-Zuud-Drèents]] van de Drèents-Oaveriesselse grèensstreek.}}
-
+[[Kategorie:Drèents artikel]]
 [[Kategorie:Toponymie]]
