[[:Kategorie:Weg]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Diek_(weg).mw
+++ b/Diek_(weg).mw
@@ -30,3 +30,4 @@ Veurbielden:
 {{Dia|Dit stok is eschreven in 't [[Zuudwest-Zuud-Drèents]] van de Drèents-Oaveriesselse grèensstreek.}}
 [[Kategorie:Drèents artikel]]
 [[Kategorie:Toponymie]]
+[[Kategorie:Weg]]
