Verwysing nå döärverwyssyde repareerd ([[De Heurne]] nå [[De Heurne (Aalten)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Diek_(weg).mw
+++ b/Diek_(weg).mw
@@ -20,7 +20,7 @@ Veurbielden:
 *de Oude Klaverdijk bi'j [[Grolle]]
 *de Vredener Dyk bi'j [[Vrene]]
 *de Burloer Diek en Klosterdiek bi'j [[Burlo]]
-*de Nijmansdijk en Spekkendijk bi'j [[De Heurne]]
+*de Nijmansdijk en Spekkendijk bi'j [[De Heurne (Aalten)|De Heurne]]
 *de Gochse Dijk en Hülmer Deich bi'j [[Goch]]
 *In de Gelderse gemiente Montferland hej de buurtschoppen [[Old-Diek (Montferland)|Old-Diek]] en [[Den Diek]].
 
