--- a/Nedersaksisch_C.mw
+++ b/Nedersaksisch_C.mw
@@ -34,6 +34,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit C begunt''' oet 't [[Neders
 *[[Sallaans]]: 
 **''sukela'' ([[Zwols]])
 **''sukkela'' ([[Dèventers]])
+**''sukelao''
 *[[Stellingwarfs]]: ''sukelao''
 *[[Tweants]]: ''sokkelaa'', ''sukelaa'', ''sukeloa(t)''
 *[[Urkers]]: ...
