--- a/Top_2000.mw
+++ b/Top_2000.mw
@@ -1,4 +1,5 @@
 De '''Top 2000''' is nen jårliks radioprogramma van et neaderlandsken radiostatsion [[NPO Radio 2|Radio 2]]. Der wördet 2000 musyknümmers edreaid in ne lyste dee döär stemming van lüüsterårs is såmenestelled. De Top 2000 wördet sinds 1999 jårliks in de låtste dågen van et jår üütesönden.
 
+{{Dialekt|act}}
 [[Kategorie:Radiopregramma]]
 [[Kategorie:Muziek]]
