*Empty MediaWiki Message*

--- a/2021.mw
+++ b/2021.mw
@@ -9,6 +9,7 @@
 *23 januari - Veur et eerst sinds de [[Twiede Wereldoorlog]] is er in Nederlaand weer een [[aovendklok]]. De aovendklok is in ezet teagen et [[COVID-19|coronavirus]] en duurt töt 10 februari. Van 21:00 töt 04:30 uur mogen allenig meansen met een 'Eigen verklaoring aovendklok' op straote wean.
 *24 januari - Rellen in verschillende Nederlaandse steden en op aandere plekken
 *25 januari - Opni'j rellen in verschillende plekken in Nederlaand.
+*1 februari - [[Aung San Suu Kyi]] wier ofezet deur et leger van [[Myanmar]] tiedens een [[Staotsgreep in Myanmar (2021)|coup]].
 *10 juni - In [[Noord-Amerika]], [[Europa]] en [[Azië]] is er een ringvörmige [[zunsverduustering]] te zien.
 *4 december - Op [[Antarctica]] en in dielen van de [[Grote Oceaan]] is er een totaole zunsverduustering te zien.
 
