[[:Kategorie:Schriever]] weg-ehaald; [[:Kategorie:Nederlaandse schriever]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Metje_Blaak.mw
+++ b/Metje_Blaak.mw
@@ -26,9 +26,8 @@ Seyd at see med et hurenwark estopped is, düt see böke en kinderböke skryven.
 
 ==Uutgånde verwysingen==
 * [http://www.metjeblaak.nl/ Metjeblaak.nl - Eygene websteade]
-* [https://www.youtube.com/channel/UCxPZDPXLJZVO8g1RBMl-P1g Blaak syn YouTube]
+* [https://www.youtube.com/channel/UCxPZDPXLJZVO8g1RBMl-P1g Blaak heur YouTube]
 
 {{DEFAULTSORT:Blaak, Metje}}
-
-[[Kategorie: Tweants artikel]]
-[[Kategorie: Schriever]]
+[[Kategorie:Tweants artikel]]
+[[Kategorie:Nederlaandse schriever]]
