*Empty MediaWiki Message*

--- a/Keie.mw
+++ b/Keie.mw
@@ -1,7 +1,7 @@
 [[Ofbeelding:Concrete wall.jpg|thumb|250px|Een mure emaak mit keien]]
 Een '''keie''' of een '''baksteen''' is een kunsmaotige steen, dee emaak wonnen van [[klei]] en kan eventueel 'vermagerd' wonnen mit [[zaand]], de klei wonnen in een vorm edaon en of-ebakken in een speciale [[noven]]d mit een [[temperetuur]] van 900 tot 1.200 [[Celsius|ºC]] (ofhankelijk van de kleisoorte), hiernao wonnen 't paor dagen of-ekoeld, um scheuren en barsen te veurkoemen. In warmere lanen wonnen de keien vake edreug deur de [[zunne]], dit duurt meestiends twee of dree dagen. Een keie wonnen gebruuk um gebouwen, [[mure]]n of wegen mee te maken. Je kunnen in de plaose van keien oek betonnen bestaoting legen. Keien kunnen emaak wonnen deur mesines of deur meensewark, in [[Europa (continent)|Europa]] gebeurt dit meestentieds mit mesines, terwiel 't in de armere lanen meestentieds mit meensewark edaon wonnen.
 
-Bie 't bouwen van een mure of een gebouwen wonnen cement gebruuk as een soorte van liem, 't cement is tussen de keien deur haos altied zichbaor en wonnen oek wel de [[voege]] eneumd.
+Bie 't bouwen van een mure of een gebouwen wonnen cement gebruuk as een soorte van liem, 't cement is tussen de keien deur haos altied zichbaor en wonnen oek wel de [[voege]] eneumd. Verder is keie ook de naam van een geweldige youtuber. Daar heet hij: keie Kager
 
 == Nedersaksisch ==
 * [[Achterhooks]]: ''bakkei''
